# givenergy_inverter_manager

./: .bandit.yaml  .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  ROADMAP.md  coverage.json  hacs.json  pyproject.toml  requirements-test.txt
.github/workflows/: codeql.yml  hacs.yml  hassfest.yml  tests.yml
custom_components/givenergy_inverter_manager/: __init__.py  accumulation.py  button.py  config_flow.py  const.py  coordinator.py  dashboard.py  diagnostics.py  icons.json  logging.py  manifest.json  number.py  quality_scale.yaml  repairs.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/givenergy_inverter_manager/core/: __init__.py  battery.py  engine.py  optimizer.py  reporting.py  rules.py  tariff.py
custom_components/givenergy_inverter_manager/discovery/: __init__.py  ev_charger.py  givtcp.py
custom_components/givenergy_inverter_manager/translations/: en.json
docs/: architecture.mermaid  automations.md  charge-target-logic.mermaid  configuration.md  dashboard.md  entities.md  ev-charger-logic.mermaid  how-it-works.md  immersion-logic.mermaid  tariff-precedence.mermaid  tariff.md  test-coverage.mermaid  troubleshooting.md  update-cycle.mermaid
tests/: conftest.py  test_accumulation.py  test_config_flow.py  test_config_flow_schemas.py  test_coordinator.py  test_dashboard.py  test_diagnostics.py  test_logging.py  test_scenarios.py  test_sensors.py  test_swicth.py  test_untested_modules.py
tests/core/: test_battery.py  test_engine.py  test_optimizer.py  test_rules.py  test_tariff.py
tests/discovery/: test_ev_charger.py  test_givtcp.py
