[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "givenergy-inverter-manager"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["custom_components/givenergy_inverter_manager"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "N", "C", "I"]
# E501 is enforced by line-length above; listing it in ignore would defeat that
ignore = ["N818"]

[tool.ruff.lint.per-file-ignores]
# HA voluptuous schema definitions are inherently verbose and cannot be
# split without losing readability — the dict key IS the schema declaration
"custom_components/*/config_flow.py" = ["E501"]
"tests/*" = ["E501"]
