[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "givenergy_inverter_manager"
version = "0.1.5"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["custom_components/givenergy_inverter_manager"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "N", "C", "I"]
# E501 is enforced by line-length above; listing it in ignore would defeat that
ignore = ["N818"]

[tool.ruff.lint.per-file-ignores]
# HA voluptuous schema definitions are inherently verbose and cannot be
# split without losing readability — the dict key IS the schema declaration
"custom_components/*/config_flow.py" = ["E501"]
"tests/*" = ["E501", "C901"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
ignore_missing_imports = true

# HA-dependent modules cannot be strictly checked without the full HA package
# and its type stubs. Pure logic in core/ is strictly typed.
[[tool.mypy.overrides]]
module = [
    "custom_components.givenergy_inverter_manager.coordinator",
    "custom_components.givenergy_inverter_manager.config_flow",
    "custom_components.givenergy_inverter_manager.sensor",
    "custom_components.givenergy_inverter_manager.switch",
    "custom_components.givenergy_inverter_manager.number",
    "custom_components.givenergy_inverter_manager.dashboard",
    "custom_components.givenergy_inverter_manager.accumulation",
    "custom_components.givenergy_inverter_manager.diagnostics",
    "custom_components.givenergy_inverter_manager.logging",
    "custom_components.givenergy_inverter_manager.repairs",
    "custom_components.givenergy_inverter_manager.discovery.*",
]
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false
disallow_any_generics = false
